--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <header>
       <h1 id="title">Paleta de Cores</h1>
   </header>
-  <main>
+  <main id="main-containe">
       <div id="color-palette"></div>
+      <button id="clear-board" type="submit">Limpar</button>
       <div id="pixel-board"></div>
   </main>
   <footer></footer>
