--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   </header>
   <main id="main-containe">
       <div id="color-palette"></div>
-      <button id="clear-board" type="submit">Limpar</button>
+      <div id="pixel-board-size"></div>
+      <div id="clear"></div>
       <div id="pixel-board"></div>
   </main>
   <footer></footer>
